brochure name updated

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             Information Technology, Allahabad, Prayagraj</p>
                         <a class="btn-solid-lg page-scroll"
                             href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">REGISTER</a>
-                        <a class="btn-outline-lg page-scroll" href="/assets/brochure1943.pdf">BROCHURE</a>
+                        <a class="btn-outline-lg page-scroll" href="/assets/5thSummerSchool.pdf">BROCHURE</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
