--- a/iiita.html
+++ b/iiita.html
@@ -229,6 +229,7 @@
                         </ul>
                     </div>
                 </div> <!-- end of col -->
+                <!--
                 <div class="col-md-3">
                     <div class="footer-col fourth">
                         <h5>Social Media</h5>
@@ -252,7 +253,7 @@
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
-                </div> <!-- end of col -->
+                </div>--> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->
