--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
                             </div>
                             
                             <div class="form-group">
-                                <button type="submit" class="form-control-submit-button">REGISTER FOR SUMMER SCHOOL</button>
+                                <button onclick="document.location='https://forms.gle/xKfLRbK9NiyM8Tk89'" type="submit" class="form-control-submit-button">REGISTER FOR SUMMER SCHOOL</button>
+                                
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control-submit-button">REGISTER FOR CONFERENCE (ICBF)</button>
+                                <button onclick="document.location='https://forms.gle/GoHoPymmkq274VAF8'" type="submit" class="form-control-submit-button">REGISTER FOR CONFERENCE (ICBF)</button>
                             </div>
                             <div class="form-message">
                                 <div id="rmsgSubmit" class="h3 text-center hidden"></div>
@@ -549,6 +550,9 @@
                         </ul>
                     </div>
                 </div> <!-- end of col -->
+
+                <!--Social Media Handles for Future-->
+                <!-- 
                 <div class="col-md-3">
                     <div class="footer-col fourth">
                         <h5>Social Media</h5>
@@ -572,7 +576,7 @@
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
-                </div> <!-- end of col -->
+                </div>--> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->
