--- a/pastsummerschool.html
+++ b/pastsummerschool.html
@@ -231,7 +231,7 @@
                         </ul>
                     </div>
                 </div>
-
+                <!--
                 <div class="col-md-3">
                     <div class="footer-col fourth">
                         <h5>Social Media</h5>
@@ -255,7 +255,7 @@
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
-                </div> <!-- end of col -->
+                </div>--> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->
