--- a/index.html
+++ b/index.html
@@ -298,7 +298,9 @@
                         <p>The programme is open for students, research scholars, professionals, executives and
                             entrepreneurs who have interest in learning behavioural
                             finance. Prior knowledge of theories of financial management is not a limitation to attend
-                            this programme.</p>
+                            this programme.
+                            <br>The programme will be of five days duration from 13th June to 17th June
+                            2022 followed by the international conference on 18th and 19th June 2022</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
