--- a/iiita.html
+++ b/iiita.html
@@ -37,8 +37,8 @@
 
 <body data-spy="scroll" data-target=".fixed-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+       <!-- Navigation -->
+       <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
 
         <!-- Text Logo - Use this if you don't have a graphic logo -->
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Corso</a> -->
@@ -59,28 +59,55 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link page-scroll" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#description">DETAILS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="register.html">REGISTER <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="fees.html">FEES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">REGISTER
+                        <span class="sr-only">(current)</span></a>
                 </li>
 
                 <!-- Dropdown Menu -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#date" id="navbarDropdown" role="button"
-                        aria-haspopup="true" aria-expanded="false">MORE</a>
+                        aria-haspopup="true" aria-expanded="false">ABOUT</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="pastsummerschool.html"><span class="item-text">PAST SUMMER
-                                SCHOOLS</span></a>
+                        <a class="dropdown-item" href="ssbf.html"><span class="item-text">SSBF</span></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="iiita.html"><span class="item-text">ABOUT IIITA</span></a>
                         <!--<div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="gallery.html"><span class="item-text">GALLERY</span></a>-->
                     </div>
                 </li>
-                <!-- end of dropdown menu -->
 
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle page-scroll" href="#date" id="navbarDropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">DATES</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="dates.html#2022"><span class="item-text">2022</span></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="dates.html#2021"><span class="item-text">2021</span></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="dates.html#2020"><span class="item-text">2020</span></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="dates.html#2019"><span class="item-text">2019</span></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="dates.html#2018"><span class="item-text">2018</span></a>
+                        <!--<div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="gallery.html"><span class="item-text">GALLERY</span></a>-->
+                    </div>
+                </li>
+                <!-- end of dropdown menu -->
+                
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="comittee.html">COMITTTEE</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
                 </li>
