--- a/ssbf.html
+++ b/ssbf.html
@@ -39,6 +39,7 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+
     
             <!-- Image Logo -->
             <a class="navbar-brand logo-image" href="index.html"
@@ -128,13 +129,12 @@
         <!-- end of navigation -->
 
 
-
     <!-- Header -->
     <header id="header" class="ex-header">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="white">Past Summer Schools </h1>
+                    <h1 class="white">Summer School on Behavioural Finance </h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
