updated nav bar

--- a/comittee.html
+++ b/comittee.html
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="white">Register </h1>
+                    <h1 class="white">Comittee </h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Register</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Comittee</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
