--- a/ssbf.html
+++ b/ssbf.html
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h3>About the Earlier/Previous Summer Schools on Behavioural Finance</h3>
+                        <h3>Topic</h3>
                         
                     </div>
                 </div>
@@ -176,37 +176,13 @@
 
                         <div class="row">
                             <div class="col-md-6">
-                                <p>The ‘Summer School on Behavioural Finance’ is the one unrivalled programme. Being aware that
-                                    Behavioural finance is
-                                    still a novel and unexplored area of research, the Indian Institute of Information
-                                    Technology Allahabad started this
-                                    programme in the year 2018 with the objective of encouraging the researchers who wish to
-                                    work in the concerned area.
-                                    Since the very beginning of the programme, a large number of students, researchers and
-                                    faculties from all around the
-                                    world, have been attending this programme. The recent pandemic didn’t stop us from
-                                    conducting the programme and as a
-                                    result, the programme saw an upsurge in the number of applications with more than 170
-                                    participants from all around the
-                                    world in the year 2020 and 184 in the year 2021.</p>
-                                
-                            </div>
-                            <div class="col-md-6">
-                                <div class="image-container-small">
-                                    <img class="img-fluid" src="images/grouppic.jpeg" alt="alternative">
-                                </div>
+                                <p>Training and Guidance
                             </div>
                         </div>
                         <div class="row">
 
                             <div class="col-lg-12">
-                                    <p> Furthermore, the programme has created a large network of experts and
-                                        researchers to keep all the members connected through the lamp of knowledge and spark the
-                                        will of being a seeker. The Summer School on Behavioural Finance has grown tremendously over the years, making it the
-                                        <strong> fastest-growing programme on Behavioural Finance</strong> in the country. With the high-quality academic
-                                        content and experts from IIMs, IITs, IIITs, and renowned Central Universities, it has
-                                        emerged as an internationally
-                                        reckoned programme.
+                                    <p> Paper Writing
                                         </p>
                             </div>
 
