--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
 
 
     <!-- Description -->
-    <div id="description" class="basic-2">
+    <div id="description" style="background-color: #fbf9f5;">
+        <br>
+    <div  class="basic-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -311,6 +313,7 @@
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-2 -->
+    </div>
     <!-- end of description -->
 
 
