added fee button in registration

--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Last date of registration for getting early bird discount: 30th April 2022</div>
                             </li>
+                            <br>
+                            <li>
+                                <div class="form-group">
+                                    <button onclick="document.location='./fees.html'" type="submit" class="form-control-submit-button">FEES Details</button>                 
+                                </div>
+                            </li>
                         </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
