--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- Image Logo -->
         <a class="navbar-brand logo-image" href="index.html"
-            style="color:#FFB300; font-size:2em;font-family: 'Acme', sans-serif;  text-decoration: none;">IIIT
+            style="color:#FFB300; font-size:2em;font-family: 'Acme', sans-serif;  text-decoration: none;"><img src="./images/iiita.gif" class="main-logo"><span> </span>IIIT
             ALLAHABAD</a>
 
         <!-- Mobile Menu Toggle Button -->
@@ -116,20 +116,6 @@
                     <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
                 </li>
             </ul>
-            <span class="nav-item social-icons">
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-facebook-f fa-stack-1x"></i>
-                    </a>
-                </span>
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-twitter fa-stack-1x"></i>
-                    </a>
-                </span>
-            </span>
         </div>
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
