--- a/ssbf.html
+++ b/ssbf.html
@@ -39,10 +39,13 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-    
+
+        <!-- Text Logo - Use this if you don't have a graphic logo -->
+        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Corso</a> -->
+
         <!-- Image Logo -->
         <a class="navbar-brand logo-image" href="index.html"
-            style="color:#FFB300; font-size:2em;font-family: 'Acme', sans-serif;  text-decoration: none;">IIIT
+            style="color:#FFB300; font-size:2em;font-family: 'Acme', sans-serif;  text-decoration: none;"><img src="./images/iiita.gif" class="main-logo"><span> </span>IIIT
             ALLAHABAD</a>
 
         <!-- Mobile Menu Toggle Button -->
@@ -109,20 +112,6 @@
                     <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
                 </li>
             </ul>
-            <span class="nav-item social-icons">
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-facebook-f fa-stack-1x"></i>
-                    </a>
-                </span>
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-twitter fa-stack-1x"></i>
-                    </a>
-                </span>
-            </span>
         </div>
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
