--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <!-- end of dropdown menu -->
                 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="comittee.html">COMITTTEE</a>
+                    <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
