--- a/speaker.html
+++ b/speaker.html
@@ -105,7 +105,7 @@
                 <!-- end of dropdown menu -->
                 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="comittee.html">COMITTTEE</a>
+                    <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="white">Comittee </h1>
+                    <h1 class="white">Speakers </h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Comittee</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Speakers</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
