--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link page-scroll" href="comittee.html">COMITTEE</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
                 </li>
             </ul>
