--- a/fees.html
+++ b/fees.html
@@ -181,7 +181,7 @@
         <table id="customers">
             <tr>
               <th></th>
-              <th>Without Accommodation</th>
+              <th>With Accommodation</th>
               <th>Without Accommodation</th>
             </tr>
             <tr>
@@ -230,7 +230,7 @@
             <table id="customers">
                 <tr>
                   <th></th>
-                  <th>Without Accommodation</th>
+                  <th>With Accommodation</th>
                   <th>Without Accommodation</th>
                 </tr>
                 <tr>
