--- a/ssbf.html
+++ b/ssbf.html
@@ -227,6 +227,112 @@
             </div> <!-- end of container -->
         </div> <!-- end of basic-2 -->
     </div>
+    <!-- Takeaways -->
+    <div class="cards">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Key Takeaways</h2>
+                    <p class="p-heading">The course has the objective of introducing the participants with
+                        fundamental of behavioural finance and intends to take them to a stage
+                        where they can apply this knowledge in everyday decision making. Following
+                        are the key learning objectives of this programme..</p>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-atom"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Opportunities</h4>
+                            <p>The participants will get the opportunity to attend the special session from academician
+                                and industry experts from India
+                                as well as from abroad;</p>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-chart-area"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Data Analytics</h4>
+                            <p>A special session on the Data Analytics techniques used in behavioral finance research
+                                will be part of the programme</p>
+                            <br>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-certificate"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Certificates</h4>
+                            <p>Proper Certification will be provided to the participants</p>
+                            <br><br><br>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-book-open"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Resources</h4>
+                            <p>All participants of Summer School will be given an original
+                                version book on behavioral finance published by PHI
+                                publications delivered at their doorstep</p>
+                            <br>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="far fa-handshake"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Present your paper</h4>
+                            <p>Participants will have the opportunity to
+                                present their research papers in the International Conference
+                                organized along with the Summer School </p>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Publish</h4>
+                            <p>Opportunity to get their papers published in the reputed journals</p>
+                        </div>
+                        <br>
+                        <br><br><br>
+                    </div>
+                    <!-- end of card -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of cards -->
+    <!-- end of takeaways -->
     <!-- Privacy Content -->
     <div class="ex-basic-2">
         <div class="container">
