Changed names and titles

--- a/comittee.html
+++ b/comittee.html
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Dr. Ranjit Singh</h5>
+                    <h5>Prof. Ranjit Singh</h5>
                     <span>Department of Management, IIIT Allahabad</span>
                 </div>
             </div>
@@ -179,8 +179,8 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Uphar Singh</h5>
-                    <span>IIIT Allahabad</span>
+                    <h5>Kajol K</h5>
+                    <span>Asst. Coordinator</span>
                 </div>
             </div>
             
@@ -192,7 +192,7 @@
                 </div>
                 <div class="team-title">
                     <h5>Shashwat Mittal</h5>
-                    <span>Technical</span>
+                    <span>Technical Coordinator</span>
                 </div>
             </div>
 
@@ -204,7 +204,7 @@
                 </div>
                 <div class="team-title">
                     <h5>Aditya Verma</h5>
-                    <span>Technical </span>
+                    <span>Technical Coordinator</span>
                 </div>
             </div>
 
