--- a/comittee.html
+++ b/comittee.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Kajol K</h5>
+                    <h5>Kajol</h5>
                     <span>Asst. Coordinator</span>
                 </div>
             </div>
