--- a/index.html
+++ b/index.html
@@ -422,7 +422,9 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-mobile-alt"></i>
-                                <div class="media-body">+91-9532766339 &nbsp;&nbsp;
+                                <div class="media-body">+91-9532766339 &nbsp;&nbsp;&nbsp;
+                                    <i class="fas fa-envelope"></i>&nbsp;
+                                    <a class="light-gray" href="mailto:ranjitsingh@iiita.ac.in">ranjitsingh@iiita.ac.in</a>
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
