added icsf page

--- a/pastsummerschool.html
+++ b/pastsummerschool.html
@@ -101,7 +101,9 @@
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
-                
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="speaker.html">INTERNATIONAL CONFERENCE</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
