--- a/speaker.html
+++ b/speaker.html
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="white">Speakers </h1>
+                    <h1 class="white">Previous Speakers </h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
