--- a/fees.html
+++ b/fees.html
@@ -127,7 +127,7 @@
                 </li>
                 <!-- end of dropdown menu -->
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="speaker.html">INTERNATIONAL CONFERENCE</a>
+                    <a class="nav-link page-scroll" href="international-conference.html">INTERNATIONAL CONFERENCE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
