--- a/dates.html
+++ b/dates.html
@@ -97,7 +97,9 @@
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
-                
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="international-conference.html">SPEAKERS</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
