--- a/international-conference.html
+++ b/international-conference.html
@@ -98,7 +98,7 @@
                 </li>
                 <!-- end of dropdown menu -->
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="speaker.html">INTERNATIONAL CONFERENCE</a>
+                    <a class="nav-link page-scroll" href="international-conference.html">SPEAKERS</a>
                 </li>
                 
                 <li class="nav-item">
