--- a/dates.html
+++ b/dates.html
@@ -101,6 +101,9 @@
                     <a class="nav-link page-scroll" href="international-conference.html">SPEAKERS</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link page-scroll" href="publication.html">PUBLICATIONS</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
                 <li class="nav-item">
