--- a/iiita.html
+++ b/iiita.html
@@ -105,6 +105,9 @@
                     <a class="nav-link page-scroll" href="international-conference.html">INTERNATIONAL CONFERENCE</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link page-scroll" href="publication.html">PUBLICATIONS</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
                 <li class="nav-item">
