--- a/publication.html
+++ b/publication.html
@@ -135,7 +135,12 @@
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
-
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="international-conference.html">INTERNATIONAL CONFERENCE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="publication.html">PUBLICATIONS</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="speaker.html">SPEAKERS</a>
                 </li>
