--- a/dates.html
+++ b/dates.html
@@ -98,7 +98,7 @@
                 </li>
                 <!-- end of dropdown menu -->
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="international-conference.html">SPEAKERS</a>
+                    <a class="nav-link page-scroll" href="international-conference.html">INTERNATIONAL CONFERENCE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="publication.html">PUBLICATIONS</a>
