--- a/fees.html
+++ b/fees.html
@@ -273,8 +273,18 @@
                   <td></td>
                 </tr>
               </table>
+
+              <br>
+              <h2>Accommodation</h2>
+              <p>Accommodation will be provided to the participants who have opted for
+                accommodation on payment of requisite fees and subject to availability of
+                rooms in the guest house of the institute on twin sharing basis. IIITA has
+                state of art guest house with all modern amenities.
+                Single room accommodation to the international participants will be
+                provided in the Institute guest house having all kinds of modern amenities.</p>
     </div> 
     </div>
+    
     <!-- end of ex-basic-2 -->
     <!-- end of privacy content -->
 
